Agregaciones y correcciones en diversos modulos