@@ -2,55 +2,60 @@ package mx.com.santander.hexagonalmodularmaven.product.adapter.jpa.repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
 import mx.com.santander.hexagonalmodularmaven.product.adapter.entity.ProductEntity;
 import mx.com.santander.hexagonalmodularmaven.product.model.entity.Product;
-import mx.com.santander.hexagonalmodularmaven.product.adapter.jpa.JpaProductRepository;
+import mx.com.santander.hexagonalmodularmaven.product.model.exception.ProductNotFound;
+import mx.com.santander.hexagonalmodularmaven.product.adapter.jpa.SpringProductRepository;
 import mx.com.santander.hexagonalmodularmaven.product.adapter.mapper.MapperProduct;
 import mx.com.santander.hexagonalmodularmaven.product.port.repository.ProductRepository;
 
 @Repository
 public class ProductRepositoryJpa implements ProductRepository{
-    private final JpaProductRepository jpaProductRepository;
+    private final SpringProductRepository springProductRepository;
     private final MapperProduct mapperProduct;
 
-    public ProductRepositoryJpa(JpaProductRepository jpaProductRepository, MapperProduct mapperProduct){
-        this.jpaProductRepository = jpaProductRepository;
+    public ProductRepositoryJpa(SpringProductRepository springProductRepository, MapperProduct mapperProduct){
+        this.springProductRepository = springProductRepository;
         this.mapperProduct = mapperProduct;
     }
 
     @Override
+    public Product create(Product product) {
+        return save(product);
+    }
+
+    @Override
     public Optional<Product> findById(Long id){
-        return jpaProductRepository.findById(id)
+        return springProductRepository.findById(id)
         .map(mapperProduct::toDomain);
     }
 
     @Override
     public Product save(Product product) {
         ProductEntity entity = mapperProduct.toEntity(product);
-        ProductEntity saved = jpaProductRepository.save(entity);
+        ProductEntity saved = springProductRepository.save(entity);
         return mapperProduct.toDomain(saved);
     }
 
     @Override
     public void deleteById(Long id) {
-        jpaProductRepository.deleteById(id);
+        springProductRepository.deleteById(id);
     }
 
     @Override
     public List<Product> findAll() {
-        return jpaProductRepository.findAll()
+        return springProductRepository.findAll()
             .stream()
             .map(mapperProduct::toDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
     public Product update(Long id, Product product) {
-        Optional<ProductEntity> existingEntityOpt = jpaProductRepository.findById(id);
+        Optional<ProductEntity> existingEntityOpt = springProductRepository.findById(id);
         if (existingEntityOpt.isPresent()) {
             ProductEntity existingEntity = existingEntityOpt.get();
 
@@ -58,10 +63,10 @@ public class ProductRepositoryJpa implements ProductRepository{
             existingEntity.setPrecio(product.getPrecio());
             existingEntity.setStock(product.getStock());
 
-            ProductEntity updatedEntity = jpaProductRepository.save(existingEntity);
+            ProductEntity updatedEntity = springProductRepository.save(existingEntity);
             return mapperProduct.toDomain(updatedEntity);
         } else {
-            throw new RuntimeException("Producto con id " + id + "no encontrado");
+            throw new ProductNotFound("Producto con id " + id + "no encontrado");
         }
     }
 }
